test/TestPhases/typechecker/valid/SideEffect4.blc
module

function sideeffect()(x: int32) returns bool
    x = x + 1
    return true
end

activity main ()()
    var a: int32 = 0
    var x: [2]bool =
        { false, 
          sideeffect()(a) }
    await false
end
